--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ beautifulsoup4==4.12.3
 bleach==6.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
+colorzero==2.0
 decorator==5.1.1
 defusedxml==0.7.1
 docopt==0.6.2
 executing==2.0.1
 fastjsonschema==2.19.1
 getrpimodel==0.1.23
+gpiozero==2.0.1
 idna==3.6
 influxdb==5.3.1
 ipython==8.12.3
@@ -21,6 +23,7 @@ jsonschema-specifications==2023.12.1
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 jupyterlab_pygments==0.3.0
+lgpio==0.2.2.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.6
 mh-z19==3.1.3
@@ -46,8 +49,8 @@ pyzmq==25.1.2
 referencing==0.34.0
 requests==2.31.0
 rpds-py==0.18.0
+rpi-lgpio==0.4
 RPi.bme280==0.2.4
-RPi.GPIO==0.7.1
 six==1.16.0
 smbus2==0.4.3
 soupsieve==2.5
