--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,14 @@ bleach==6.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 colorzero==2.0
+contourpy==1.2.1
+cycler==0.12.1
 decorator==5.1.1
 defusedxml==0.7.1
 docopt==0.6.2
 executing==2.0.1
 fastjsonschema==2.19.1
+fonttools==4.51.0
 getrpimodel==0.1.23
 idna==3.6
 influxdb==5.3.1
@@ -22,8 +25,10 @@ jsonschema-specifications==2023.12.1
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 jupyterlab_pygments==0.3.0
+kiwisolver==1.4.5
 lgpio==0.2.2.0
 MarkupSafe==2.1.5
+matplotlib==3.8.4
 matplotlib-inline==0.1.6
 mh-z19==3.1.3
 mistune==3.0.2
@@ -31,16 +36,19 @@ msgpack==1.0.8
 nbclient==0.10.0
 nbconvert==7.16.3
 nbformat==5.10.3
+numpy==1.26.4
 packaging==24.0
 pandocfilters==1.5.1
 parso==0.8.3
 pexpect==4.9.0
 pickleshare==0.7.5
+pillow==10.3.0
 platformdirs==4.2.0
 prompt-toolkit==3.0.43
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.17.2
+pyparsing==3.1.2
 pyserial==3.5
 python-dateutil==2.9.0.post0
 pytz==2024.1
@@ -50,6 +58,7 @@ requests==2.31.0
 rpds-py==0.18.0
 rpi-lgpio==0.4
 RPi.bme280==0.2.4
+simple-pid==2.0.0
 six==1.16.0
 smbus2==0.4.3
 soupsieve==2.5
