--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ nbconvert==7.16.3
 nbformat==5.10.3
 numpy==1.26.4
 packaging==24.0
+paho-mqtt==1.6.1
 pandocfilters==1.5.1
 parso==0.8.3
 pexpect==4.9.0
